# PMCAplus

./: .env  .gitignore  .gitmodules  PMCA.cp35-win_amd64.pyd  PMCA.pyd  PMCA_GL.py  PMCA_View.py  PMCA_ctypes.py  PMCA_dialogs.py  PMCA_pymain.py  PMCA_tkinter.bat  PMCAv0_0_6r10_win.pyproj  PMCAv0_0_6r10_win.sln  PyPMCA.py  README.md  build.zig  build.zig.zon  last.cnl  meson.build  pmca_data.py  pyproject.toml  pyrightconfig.json  run.bat  りどみ.txt
.github/workflows/: docusaurus.yml
PMCA/: PMCA_data.py  PMCA_types.py  PyPMCA.py  __main__.py  main_frame.py  main_frame_color.py  main_frame_info.py  main_frame_model.py  main_frame_transform.py
PyPMCA/: PMCA_types.py  PyPMCA.py  __init__.py  __main__.py  app.py  assemble.py  author_license.py  bone.py  cnl.py  color_logger.py  info.py  logging_util.py  mat_rep.py  material.py  material_entry.py  native.py  node.py  parts.py  parts_assembler.py  parts_node.py  parts_tree.py  pmca_assets.py  pmca_data.py  pmd.py  renderer.py  transform.py  translation.py  translation_list.py  types.py  v1_converter.py  vt.py
PyPMCA/PMCA_asset/: __init__.py  cnl.py  data.py  mats.py  model_transform_data.py  node.py  parts.py
PyPMCA/PMCA_cnl/: __init__.py  assemble.py  cnl.py  mat_rep.py  node.py
PyPMCA/PMCA_data/: __init__.py  cnl.py  data.py  mats.py  model_transform_data.py  node.py  parts.py
PyPMCA/gl_scene/: __init__.py
PyPMCA/gui/: PMCA_dialogs.py  bone.py  main_frame.py  main_frame_color.py  main_frame_info.py  main_frame_model.py  main_frame_transform.py  material.py  node.py
PyPMCA/gui_pyside/: __main__.py  color_tab.py  generic_tree_model.py  gl_scene.py  main_frame.py  model_tab.py  transform_tab.py
PyPMCA/gui_tk/: PMCA_dialogs.py  __main__.py  color_tab.py  info_tab.py  listbox.py  main_frame.py  main_frame_color.py  main_frame_model.py  main_frame_transform.py  model_tab.py  tabs.py  transform_tab.py
PyPMCA/pmd_type/: __init__.py  bone.py  ik.py  info.py  material.py  parser.py  pmd.py  resize.py  rigidbody.py  skin.py  to_bytes.py  types.py  vt.py
PyPMCA/pyside_gui/: generic_tree_model.py  gl_scene.py  main_frame.py
assets/basic/parts/: hair_mf1_mt004.pmd  hair_mr1_mt007.pmd  head_mt052_1.pmd
converter/: Makefile  PMCA.h  PMCA_1.0-2.0converter  PMCA_loadconf.c  PMCA_loadconf.cpp  PMCA_main.c  PMCA_main.cpp  __init__.py  converter.py  mPMD.h  meson.build
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/blog/: 20240506-pmca_mod.md  20240510_pysdl.md  20240601_to_python.md
docs/docs/: history.md  index.md
docs/docs/assemble/: add.md  index.md  merge.md
docs/docs/data/: cnl.md  index.md  list_txt.md  materials.md  parts.md  transforms.md
docs/src/pages/: index.tsx
gui/: __init__.py  dialogs.py  info_tab.py  listbox.py  main_frame.py  material_tab.py  menubar.py  model_tab.py  transform_tab.py
mPMD/: dbg.c  dbg.h  mPMD.h  mlib_PMD_edit01.c  mlib_PMD_edit01.h  mlib_PMD_rw01.c  mlib_PMD_rw01.h
model/: tmp.cnl
pmca_qt/: __init__.py  glframe.py  mainframe.py
pmca_tkinter/: __init__.py  glframe.py  mainframe.py  tabs.py  utils.py
scripts/: nomarge.py  parts_move.py  set_basebone.py  setchildof.py
sources/: PMCA.h  PMCA.pyx  PMCA_PyMod.c  PMCA_PyMod.cpp  PMCA_PyMod.h  PMCA_SDLMod.c  PMCA_SDLMod.h  PMCA_view.c  cython.bat  cython_setup.py  debug_io.h  fixed_string.h  mList.cpp  mList.h  mPMD.cpp  mPMD.h  mPMD_edit.c  mPMD_edit.cpp  mPMD_edit.h  mPMD_rw.cpp  mPMD_rw.h  meson.build  mlib_PMD_edit01.c  mlib_PMD_edit01.cpp  mlib_PMD_rw01.c  mlib_PMD_rw01.cpp  premake5.lua  premake5_vs2015.bat  python_header.h  setup.py
src/: PMCA.c  PMCA.h  PMCA_PyMod.c  PMCA_SDLMod.c  PMCA_SDLMod.h  PMCA_view.c  PMCA_view.h  mPMD.h  main.zig  mlib_PMD_rw01.c
src/converter/: PMCA_loadconf.cpp  PMCA_loadconf.h  main.cpp  meson.build
src/pmca/: PMCA.h  PMCA_PyMod.cpp  PMCA_PyMod.h  PMCA_SDLMod.cpp  PMCA_SDLMod.h  PMCA_glfw.cpp  PMCA_glfw.h  PMCA_renderer.cpp  PMCA_renderer.h  PMCA_view.cpp  algebraic_geometry.h  dbg.cpp  dbg.h  dsp_model.cpp  dsp_model.h  flags.h  ioutil.cpp  ioutil.h  list.cpp  list.h  mPMD.cpp  mPMD.h  meson.build  mlib_PMD_edit01.cpp  namelist.cpp  namelist.h  pmd_model.cpp  pmd_model.h  quat.cpp  quat.h
subprojects/: sergiusthebest-plog.wrap
subprojects/SDL-1.2/: meson.build
subprojects/SDL_image-SDL-1.2/: meson.build
tabs/: __init__.py  info_tab.py  material_tab.py  model_tab.py  transform_tab.py
typings/: PMCA.pyi
