project('SDL', 'c')

# configure_file(
#     input: 'include/SDL_config.h.default',
#     output: 'SDL_config.h',
#     copy: true,
#     install: true,
#     install_dir: 'include',
# )

# fs = import('fs')
# fs.copyfile(
#     'include/SDL_config.h.default',
#     'SDL_config.h',
#     install_dir: 'include',
# )

sdl_inc = include_directories('include')
sdl_lib = static_library(
    'sdl',
    [
        'src/SDL.c',
        'src/events/SDL_active.c',
        'src/audio/SDL_audio.c',
        'src/audio/SDL_audiocvt.c',
        'src/video/SDL_blit.c',
        'src/video/SDL_blit_0.c',
        'src/video/SDL_blit_1.c',
        'src/video/SDL_blit_A.c',
        'src/video/SDL_blit_N.c',
        'src/video/SDL_bmp.c',
        'src/cdrom/SDL_cdrom.c',
        'src/cpuinfo/SDL_cpuinfo.c',
        'src/video/SDL_cursor.c',
        'src/audio/windib/SDL_dibaudio.c',
        'src/video/windib/SDL_dibevents.c',
        'src/video/windib/SDL_dibvideo.c',
        'src/audio/disk/SDL_diskaudio.c',
        'src/audio/dummy/SDL_dummyaudio.c',
        'src/audio/windx5/SDL_dx5audio.c',
        'src/video/windx5/SDL_dx5events.c',
        'src/video/windx5/SDL_dx5video.c',
        'src/video/windx5/SDL_dx5yuv.c',
        'src/SDL_error.c',
        'src/events/SDL_events.c',
        'src/events/SDL_expose.c',
        'src/SDL_fatal.c',
        'src/video/SDL_gamma.c',
        'src/stdlib/SDL_getenv.c',
        'src/stdlib/SDL_iconv.c',
        'src/joystick/SDL_joystick.c',
        'src/events/SDL_keyboard.c',
        'src/stdlib/SDL_malloc.c',
        'src/audio/SDL_mixer.c',
        'src/audio/SDL_mixer_MMX_VC.c',
        'src/joystick/win32/SDL_mmjoystick.c',
        'src/events/SDL_mouse.c',
        'src/video/dummy/SDL_nullevents.c',
        'src/video/dummy/SDL_nullmouse.c',
        'src/video/dummy/SDL_nullvideo.c',
        'src/video/SDL_pixels.c',
        'src/stdlib/SDL_qsort.c',
        'src/events/SDL_quit.c',
        'src/events/SDL_resize.c',
        'src/video/SDL_RLEaccel.c',
        'src/file/SDL_rwops.c',
        'src/stdlib/SDL_stdlib.c',
        'src/video/SDL_stretch.c',
        'src/stdlib/SDL_string.c',
        'src/video/SDL_surface.c',
        'src/cdrom/win32/SDL_syscdrom.c',
        'src/thread/generic/SDL_syscond.c',
        'src/video/wincommon/SDL_sysevents.c',
        'src/loadso/win32/SDL_sysloadso.c',
        'src/video/wincommon/SDL_sysmouse.c',
        'src/thread/win32/SDL_sysmutex.c',
        'src/thread/win32/SDL_syssem.c',
        'src/thread/win32/SDL_systhread.c',
        'src/timer/win32/SDL_systimer.c',
        'src/video/wincommon/SDL_syswm.c',
        'src/thread/SDL_thread.c',
        'src/timer/SDL_timer.c',
        'src/video/SDL_video.c',
        'src/audio/SDL_wave.c',
        'src/video/wincommon/SDL_wingl.c',
        'src/video/SDL_yuv.c',
        'src/video/SDL_yuv_sw.c',
        # 'src/main/win32/version.rc',
    ],
    include_directories: sdl_inc,
    c_args: [
        '-D_CRT_SECURE_NO_DEPRECATE',
        '-D_WINDOWS',
        '-D_WIN32_WINNT=0x0400',
    ],
)

cc = meson.get_compiler('c')
sdl_dep = declare_dependency(
    link_with: sdl_lib,
    include_directories: sdl_inc,
    dependencies: [
        cc.find_library('winmm', required: true),
        cc.find_library('dxguid', required: true),
    ],
)
